@@ -31,7 +31,7 @@ public class Join extends NodeToolCmd
     @Override
     public void execute(NodeProbe probe)
     {
-        checkState(!probe.isJoined(), "This node has already joined the ring.");
+        checkState(!probe.isJoined() || probe.isSurveyMode(), "This node has already joined the ring.");
 
         try
         {
